@@ -51,6 +51,7 @@ Version 1.13.5+dev:
      high HP, drain, slow, berserk, etc.) it's significantly faster than the default
      damage calculation method.
 * Miscellaneous and bug fixes:
+   * Fixed a stray ; character appearing pre-entered in the command console.
    * Fixed bug in wesnothd that was causing server crashes if game with
      multiple network and local players was ran.
    * Added a tab to run the wmlxgettext tool to GUI.pyw
